chore(deps): introduced lombok